--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
       <div>
         <h3>HTML Tasks</h3>
         <ul>
-          <li><a href="/html tasks/task1.html">Task 1</a></li>
-          <li><a href="/html tasks/task2.html">Task 2</a></li>
-          <li><a href="/html tasks/task3.html">Task 3</a></li>
-          <li><a href="/html tasks/task4.html">Task 4</a></li>
-          <li><a href="/html tasks/task5.html">Task 5</a></li>
+          <li><a href="html tasks/task1.html">Task 1</a></li>
+          <li><a href="html tasks/task2.html">Task 2</a></li>
+          <li><a href="html tasks/task3.html">Task 3</a></li>
+          <li><a href="html tasks/task4.html">Task 4</a></li>
+          <li><a href="html tasks/task5.html">Task 5</a></li>
         </ul>
       </div>
 
       <div>
         <h3>CSS Tasks</h3>
         <ul>
-          <li><a href="/css tasks/csstask1.html">Task 1</a></li>
-          <li><a href="/css tasks/csstask2.html">Task 2</a></li>
-          <li><a href="/css tasks/csstask3.html">Task 3</a></li>
-          <li><a href="/css tasks/csstask4.html">Task 4</a></li>
-          <li><a href="/css tasks/csstask5.html">Task 5</a></li>
-          <li><a href="/css tasks/csstask6.html">Task 6</a></li>
-          <li><a href="/css tasks/csstask7.html">Task 7</a></li>
+          <li><a href="css tasks/csstask1.html">Task 1</a></li>
+          <li><a href="css tasks/csstask2.html">Task 2</a></li>
+          <li><a href="css tasks/csstask3.html">Task 3</a></li>
+          <li><a href="css tasks/csstask4.html">Task 4</a></li>
+          <li><a href="css tasks/csstask5.html">Task 5</a></li>
+          <li><a href="css tasks/csstask6.html">Task 6</a></li>
+          <li><a href="css tasks/csstask7.html">Task 7</a></li>
         </ul>
       </div>
 
       <div>
         <h3>Bootstrap Tasks</h3>
         <ul>
-          <li><a href="/bootstrap tasks/bstask1.html">Task 1</a></li>
-          <li><a href="/bootstrap tasks/bstask2.html">Task 2</a></li>
-          <li><a href="/bootstrap tasks/bstask3.html">Task 3</a></li>
-          <li><a href="/bootstrap tasks/bstask4.html">Task 4</a></li>
-          <li><a href="/bootstrap tasks/bstask5.html">Task 5</a></li>
-          <li><a href="/bootstrap tasks/bstask6.html">Task 6</a></li>
+          <li><a href="bootstrap tasks/bstask1.html">Task 1</a></li>
+          <li><a href="bootstrap tasks/bstask2.html">Task 2</a></li>
+          <li><a href="bootstrap tasks/bstask3.html">Task 3</a></li>
+          <li><a href="bootstrap tasks/bstask4.html">Task 4</a></li>
+          <li><a href="bootstrap tasks/bstask5.html">Task 5</a></li>
+          <li><a href="bootstrap tasks/bstask6.html">Task 6</a></li>
         </ul>
       </div>
     </div>
