--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       <div>
         <h3>Bootstrap Tasks</h3>
         <ul>
-          <li><a href="bootstrap tasks/bstask1.html">Task 1</a></li>
-          <li><a href="bootstrap tasks/bstask2.html">Task 2</a></li>
-          <li><a href="bootstrap tasks/bstask3.html">Task 3</a></li>
-          <li><a href="bootstrap tasks/bstask4.html">Task 4</a></li>
-          <li><a href="bootstrap tasks/bstask5.html">Task 5</a></li>
-          <li><a href="bootstrap tasks/bstask6.html">Task 6</a></li>
+          <li><a href="/bootstrap tasks/bstask1.html">Task 1</a></li>
+          <li><a href="/bootstrap tasks/bstask2.html">Task 2</a></li>
+          <li><a href="/bootstrap tasks/bstask3.html">Task 3</a></li>
+          <li><a href="/bootstrap tasks/bstask4.html">Task 4</a></li>
+          <li><a href="/bootstrap tasks/bstask5.html">Task 5</a></li>
+          <li><a href="/bootstrap tasks/bstask6.html">Task 6</a></li>
         </ul>
       </div>
     </div>
