--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
           <li><a href="/bootstrap tasks/bstask6.html">Task 6</a></li>
         </ul>
       </div>
+       <h3>Js Tasks</h3>
+        <ul>
+          <li><a href="javascript tasks/jstask1.html">Task 1</a></li>
+          <li><a href="javascript tasks/jstask2.html">Task 2</a></li>
+          <li><a href="javascript tasks/jstask3.html">Task 3</a></li>
+          <li><a href="javascript tasks/jstask4.html">Task 4</a></li>
+          <li><a href="javascript tasks/jstask5.html">Task 5</a></li>
+          <li><a href="javascript tasks/jstask6.html">Task 6</a></li>
+          <li><a href="javascript tasks/jstask7.html">Task 7</a></li>
+          <li><a href="javascript tasks/jstask8.html">Task 8</a></li>
+          <li><a href="javascript tasks/jstask9/index.html">Task 9</a></li>
+        </ul>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
