--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li><a href="javascript tasks/jstask6.html">Task 6</a></li>
           <li><a href="javascript tasks/jstask7.html">Task 7</a></li>
           <li><a href="javascript tasks/jstask8.html">Task 8</a></li>
-          <li><a href="javascript tasks/jstask9/index.html">Task 9</a></li>
+          <li><a href="javascript tasks/jstask9/index1.html">Task 9</a></li>
         </ul>
       </div>
     </div>
